gitops/apps/api-ingress/base/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-auth-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /login$2
spec:
  ingressClassName: nginx
  rules:
    - host: api.local
      http:
        paths:
          - path: /api/v1/login(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 80
